# ROS2-and-Unity-Simulation

./: .gitignore  README.md
Detect/: CMakeLists.txt  README.md  ReadMe.md  demo.cpp
Detect/.cache/clangd/index/: ArmorBase.h.BAFC45C850AEAD4B.idx  ArmorDetectorGeneral.h.CBF0CE2C2A5E0191.idx  ArmorDetectorNN.cpp.C8A9FC951FE4CDA3.idx  ArmorDetectorNN.h.8F4BCFDBD2AFED33.idx  Basic.cpp.3F08AA2B7189F9AD.idx  Basic.h.2BAB5A2876BDFD4B.idx  CamBase.h.7A0488BED4F9BBE2.idx  Frame.cpp.61E4ECAD7F5BB83D.idx  Frame.h.BA188DD980C42618.idx  HuarayCam.h.571DBC1CAD5A39A8.idx  backend.cpp.9470809524732B80.idx  backend.hpp.9345312DCF44B6E5.idx  buffer.cpp.8600FA14C213996B.idx  buffer.hpp.ED1AE1EE94C81467.idx  core.cpp.C5A4285EE733580E.idx  core.hpp.8E8D004028377989.idx  demo.cpp.9B3EA2B8FA358670.idx  macro.hpp.7B9AD1F32BC9AA0E.idx  model.cpp.8B7BDC15B6015452.idx  model.hpp.71D9DAE40D732A29.idx  option.hpp.E2332549739955DD.idx  result.hpp.1C73A0F491E1A98E.idx  utils.cpp.A560A35B9E79A58E.idx  utils.hpp.AF4EB7EE15ABC373.idx  warpaffine.cu.E67379AB5A23FC5D.idx  warpaffine.hpp.95AC1250BF97E968.idx
Detect/camera/: CMakeLists.txt
Detect/camera/base/: CMakeLists.txt  CamBase.cpp  CamBase.h
Detect/camera/cmake/: FindHUARAY.cmake
Detect/camera/demos/: CMakeLists.txt  config.mvcfg  demo.cpp
Detect/camera/huaray/: CMakeLists.txt  HUARAYConfig.cmake  HuarayCam.cpp  HuarayCam.h  README.md
Detect/deploy/: CMakeLists.txt  README.md  model.cpp  model.hpp  option.hpp  result.hpp
Detect/deploy/core/: buffer.cpp  buffer.hpp  core.cpp  core.hpp  macro.hpp
Detect/deploy/infer/: backend.cpp  backend.hpp  warpaffine.cu  warpaffine.hpp
Detect/deploy/utils/: utils.cpp  utils.hpp
Detect/src/: ArmorBase.h  ArmorDetectorGeneral.h  CMakeLists.txt
Detect/src/aim_assist_nn/: ArmorDetectorNN.cpp  ArmorDetectorNN.h  CMakeLists.txt
Detect/src/util/: Basic.cpp  Basic.h  CMakeLists.txt  Frame.cpp  Frame.h
simulation_test/Assets/: all.fbx  all.mat
simulation_test/Assets/Editor/: BatchRunner.cs
simulation_test/Assets/HDRPDefaultResources/: HDRenderPipelineAsset.asset  HDRenderPipelineGlobalSettings_VolumeProfile_Default.asset
simulation_test/Assets/Materials/: 3.mat  BlueArmor.mat  BlueLight.mat  RedArmor.mat  RedLight.mat  WhiteLight.mat  cameraRT.renderTexture
simulation_test/Assets/Models/Robot/: armor_base.dae  armor_light.dae  camera_link.dae  wheel_link.dae
simulation_test/Assets/Scenes/: RMUC2023.unity
simulation_test/Assets/Scripts/: UnityCamPub.cs  UnityCamPubV1.cs  UnityCamPubV2.cs  aim_control.cs  tracked_control.cs
simulation_test/Assets/Settings/: HDRP Balanced.asset  HDRP High Fidelity.asset  HDRP Performant.asset
simulation_test/Assets/Settings/HDRPDefaultResources/: DefaultLookDevProfile.asset  DefaultSettingsVolumeProfile.asset  HDRenderPipelineAsset.asset  HDRenderPipelineGlobalSettings.asset
